force-app/main/default/objects/DMAPP__Account_Plan_Objective__c/fields/DMAPP__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Due_Date__c</fullName>
    <description>Due Date</description>
    <inlineHelpText>The date you expect to achieve the Objective.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>