force-app/main/default/objects/DMAPP__Account_Plan_Objective__c/fields/DMAPP__Order__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Order__c</fullName>
    <label>Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>