force-app/main/default/objects/DMAPP__Account_Plan_Objective__c/fields/DMAPP__Subject__c.field-meta.xml
<CustomField>
    <fullName>DMAPP__Subject__c</fullName>
    <description>Objective Subject</description>
    <inlineHelpText>Specify the Objective by providing a description of what you want to accomplish as it relates to the Objective Type. For example, &quot;grow the pipeline&quot;, or &quot;improve relationship with key players (be specific and use the names of the Key Players)&quot;, or &quot;close</inlineHelpText>
    <label>Subject</label>
    <length>80</length>
    <type>Text</type>
</CustomField>