force-app/main/default/objects/DMAPP__Account_Plan_Objective__c/listViews/DMAPP__All.listView-meta.xml
<ListView>
    <fullName>DMAPP__All</fullName>
    <columns>NAME</columns>
    <columns>DMAPP__Objective_Description__c</columns>
    <columns>DMAPP__Strategy__c</columns>
    <columns>DMAPP__Type__c</columns>
    <columns>DMAPP__Plan_Unit__c</columns>
    <columns>DMAPP__Account_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>